force-app/main/default/objects/ACME_CalculationHistory__c/fields/ACME__CalculationHistoryNumber__c.field-meta.xml
<CustomField>
    <fullName>ACME__CalculationHistoryNumber__c</fullName>
    <label>Calculation Result</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>