force-app/main/default/objects/ACME_CalculationHistory__c/fields/ACME__CalculationType__c.field-meta.xml
<CustomField>
    <fullName>ACME__CalculationType__c</fullName>
    <label>Calculation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Addition</fullName>
            </value>
            <value>
                <fullName>Subtraction</fullName>
            </value>
            <value>
                <fullName>Multiplication</fullName>
            </value>
            <value>
                <fullName>Division</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>