force-app/main/default/objects/ACME_CalculationHistory__c/fields/ACME__FirstOperand__c.field-meta.xml
<CustomField>
    <fullName>ACME__FirstOperand__c</fullName>
    <label>First Operand</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>