force-app/main/default/objects/ACME_CalculationHistory__c/fields/ACME__Operation__c.field-meta.xml
<CustomField>
    <fullName>ACME__Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADD</fullName>
            </value>
            <value>
                <fullName>SUBTRACT</fullName>
            </value>
            <value>
                <fullName>MULTIPLY</fullName>
            </value>
            <value>
                <fullName>DIVIDE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>