force-app/main/default/objects/ACME_CalculationHistory__c/fields/ACME__Result__c.field-meta.xml
<CustomField>
    <fullName>ACME__Result__c</fullName>
    <label>Result</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>