force-app/main/default/objects/ACME_CalculationHistory__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>