force-app/main/default/objects/ACME_CalculationHistory__c/fields/SecondOperand__c.field-meta.xml
<CustomField>
    <fullName>SecondOperand__c</fullName>
    <label>Second Operand</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>